--- a/templates/atom.html
+++ b/templates/atom.html
@@ -2,7 +2,13 @@
 
 {% block head %}
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
-
+<!-- <script src="./js/data.js"></script>
+<script src="./js/main.js"></script>
+<link rel="icon" href="./images/icon.png" />
+<link rel="stylesheet" href="./css/style.css" />
+<link rel="stylesheet" href="./css/media_queries.css" />
+<link rel="stylesheet" href="./css/colors.css" />
+<link rel="stylesheet" href="./css/animations.css" /> -->
 {% endblock %}
 
 
@@ -22,14 +28,17 @@
             <p class="card-text">
               What is the name of this neutral atom? How many valence electrons does it have?
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4">
 
                   <canvas id="demoCanvas" width="250" height="250"></canvas>
                 </div>
 
+                <div class="col-md-6 offset-2">
+                  <img src="https://www.researchgate.net/profile/Ileana_Dragutan/publication/233568949/figure/fig10/AS:611327533924358@1522763250251/The-current-Periodic-Table-35-based-on-IUPAC-recommendations.png" alt="" class="img-fluid">
+                </div>
+
               </div>
 
-            </p>
 
 
 
