--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,11 @@
       <script type="text/javascript" charset="UTF-8"
  src="//cdnjs.cloudflare.com/ajax/libs/jsxgraph/0.99.7/jsxgraphcore.js"></script>
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/jsxgraph/0.99.7/jsxgraph.css" />
+
+<link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet"/>
+
+
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,35 +25,35 @@
   </head>
   <body class="container-fluid">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">STEM cards</a>
+    <nav style="background-color:#121212" class="navbar navbar-expand-lg navbar-dark fixed-top">
+      <a style="color:#FFFFFF" class="navbar-brand" href="#">STEM cards</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            <a style="color:#FFFFFF" class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a style="color:#FFA066" class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Maths
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item bg-info" href="/algeb1">Algebra: adding 2 monomials</a>
-              <a class="dropdown-item bg-info" href="/linerule">Finding rule of a line <span><img width = '20px' src='/static/new.svg' /></span></a>
-              <a class="dropdown-item bg-info" href="/intersection">Finding point of intersection <span><img width = '20px' src='/static/new.svg' /></span></a>
-              <a class="dropdown-item bg-info" href="/expand1">Binolmial multiplication <span><img width = '20px' src='/static/new.svg' /></span></a>
-              <a class="dropdown-item bg-info" href="/pythag">Pythagorean Theorem <span><img width = '20px' src='/static/new.svg' /></span></a>
-              <a class="dropdown-item bg-info" href="/scinotation">Scientific Notation <span><img width = '20px' src='/static/new.svg' /></span></a>
-              <a class="dropdown-item bg-info" href="/wordprob">Age Word Problems <span><img width = '20px' src='/static/new.svg' /></span></a>
+            <div style="background-color:#FFA066" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="/algeb1">Algebra: adding 2 monomials</a>
+              <a class="dropdown-item" href="/linerule">Finding rule of a line </a>
+              <a class="dropdown-item" href="/intersection">Finding point of intersection </a>
+              <a class="dropdown-item" href="/expand1">Binolmial multiplication </a>
+              <a class="dropdown-item" href="/pythag">Pythagorean Theorem </a>
+              <a class="dropdown-item" href="/scinotation">Scientific Notation </a>
+              <a class="dropdown-item" href="/wordprob">Age Word Problems </a>
 
               <div class="dropdown-divider"></div>
 
-              <a class="dropdown-item bg-success" href="/factoring1">Factoring</a>
-              <a class="dropdown-item bg-success" href="/exponential">Functions: Exponential <span><img width = '20px' src='/static/new.svg' /></span></a>
-              <a class="dropdown-item bg-success" href="/quadratic">Functions: Quadratic <span><img width = '20px' src='/static/new.svg' /></span></a>
-              <a class="dropdown-item bg-success" href="/circle">Conics: Formula of a Circle <span><img width = '20px' src='/static/new.svg' /></span></a>
+              <a class="dropdown-item" href="/factoring1">Factoring</a>
+              <a class="dropdown-item" href="/exponential">Functions: Exponential </a>
+              <a class="dropdown-item" href="/quadratic">Functions: Quadratic </a>
+              <a class="dropdown-item" href="/circle">Conics: Formula of a Circle </a>
 
               <a class="dropdown-item disabled" href="#">New options coming soon</a>
               <!--<a class="dropdown-item disabled" href="#">Another option</a>-->
@@ -56,18 +61,18 @@
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a style="color:#2DC4B6" class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Science
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <div style="background-color:#2DC4B6" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 
-            <a class="dropdown-item bg-info" href="/atom">Atoms <span><img width = '20px' src='/static/new.svg' /></span> </a>
-              <a class="dropdown-item bg-info" href="/density">Density</a>
-              <a class="dropdown-item bg-info" href="/force">Force (\(F=ma\)) <span><img width = '20px' src='/static/new.svg' /></span></a>
-              <a class="dropdown-item bg-info" href="/dilution">Dilutions</a>
-              <a class="dropdown-item bg-info" href="/energy">Mechanical energy</a>
-              <a class="dropdown-item bg-info" href="/pressure">Pressure</a>
-              <a class="dropdown-item bg-info" href="/concentration">Concentration</a>
+            <a class="dropdown-item" href="/atom">Atoms </a>
+              <a class="dropdown-item" href="/density">Density</a>
+              <a class="dropdown-item" href="/force">Force (\(F=ma\)) </a>
+              <a class="dropdown-item" href="/dilution">Dilutions</a>
+              <a class="dropdown-item" href="/energy">Mechanical energy</a>
+              <a class="dropdown-item" href="/pressure">Pressure</a>
+              <a class="dropdown-item" href="/concentration">Concentration</a>
 
 
 
@@ -76,22 +81,22 @@
 
 
 
+              <a class="dropdown-item" href="/permafrost">Permafrost <span><img width = '20px' src='/static/new.svg' /></span></a>
+              <a class="dropdown-item" href="/chem1">Balancing chemical equations</a>
+              <a class="dropdown-item" href="/nomenclature">Nomenclature </a>
+              <a class="dropdown-item" href="/salinity">Salinity</a>
+              <a class="dropdown-item" href="/ohms">2 resistors in series</a>
+              <a class="dropdown-item" href="/ohms-parallel">2 resistors in parallel</a>
+              <a class="dropdown-item" href="/velocity">Velocity </a>
+              <a class="dropdown-item" href="/work1">Work energy</a>
+              <a class="dropdown-item" href="/work2">Work energy 2</a>
+              <a class="dropdown-item" href="/heat">Heat energy</a>
+              <a class="dropdown-item" href="/efficiency">Energy efficiency </a>
+              <a class="dropdown-item" href="/power">Electrical Power </a>
 
-              <a class="dropdown-item bg-success" href="/chem1">Balancing chemical equations</a>
-              <a class="dropdown-item bg-success" href="/nomenclature">Nomenclature <span><img width = '20px' src='/static/new.svg' /></span></a>
-              <a class="dropdown-item bg-success" href="/salinity">Salinity</a>
-              <a class="dropdown-item bg-success" href="/ohms">2 resistors in series</a>
-              <a class="dropdown-item bg-success" href="/ohms-parallel">2 resistors in parallel</a>
-              <a class="dropdown-item bg-success" href="/velocity">Velocity <span><img width = '20px' src='/static/new.svg' /></span> </a>
-              <a class="dropdown-item bg-success" href="/work1">Work energy</a>
-              <a class="dropdown-item bg-success" href="/work2">Work energy 2</a>
-              <a class="dropdown-item bg-success" href="/heat">Heat energy</a>
-              <a class="dropdown-item bg-success" href="/efficiency">Energy efficiency <span><img width = '20px' src='/static/new.svg' /></span></a>
-              <a class="dropdown-item bg-success" href="/power">Electrical Power <span><img width = '20px' src='/static/new.svg' /></span> </a>
-
-              <a class="dropdown-item bg-success" href="/mol">Molar mass</a>
-              <a class="dropdown-item bg-success" href="/eco">Mark-recapture method</a>
-              <a class="dropdown-item bg-success" href="/genetics">Punnett Square 1 <span><img width = '20px' src='/static/new.svg' /></span></a>
+              <a class="dropdown-item" href="/mol">Molar mass</a>
+              <a class="dropdown-item" href="/eco">Mark-recapture method</a>
+              <a class="dropdown-item" href="/genetics">Punnett Square 1 </a>
 
 
               <a class="dropdown-item disabled" href="#">New options coming soon</a>
@@ -102,12 +107,15 @@
         </ul>
       </div>
     </nav>
+    <br>
+    <br>
+    <br>
 
 
     <!-- {% set n = ['a', 'b'] %} -->
-    <div class="jumbotron jumbotron-fluid bg-warning">
-      <div class="container">
-        <h1 class="display-4">Flash cards</h1>
+    <div style="background-color:#121212" class="jumbotron jumbotron-fluid">
+      <div style="color:#FFFFFF" class="container">
+        <h1 class="display-3">Flash cards</h1>
         <p class="lead">Master a topic with deliberate practice.</p>
       </div>
     </div>
@@ -156,5 +164,6 @@
           };
         });
       </script>
+
 
     </html>
