--- a/templates/index.html
+++ b/templates/index.html
@@ -3,22 +3,20 @@
 {% block body %}
 
 
-  <div class="alert alert-warning text-center" role="alert">
-    There may be some overlap in the sec 3 and sec 4 concepts
-  </div>
 
   <div class="row">
-    <div class="bg-info col-md-4 offset-md-2 text-center">
-      <br>
-      Sec 3 content in blue
-      <br>
-      <br>
-    </div>
-    <div class="bg-success col-md-4 text-center">
-      <br>
-      Sec 4 content in green
-      <br>
-      <br>
+    <div class="col-md-4 offset-md-4">
+      <div class="card">
+        <div class="card-body">
+          <p>
+            Select a topic then, solve the question. Check your answer by clicking on "check answer" and get a tutorial video when you click on "hint". To get a new randomly generated question, click on the "new" button in the top right corner of the flash card. 
+          </p>
+          <p>
+            Get 5 correct answers in a row before checking the topic off your mastered list.
+          </p>
+        </div>
+      </div>
+
     </div>
   </div>
 
