--- a/templates/algeb1.html
+++ b/templates/algeb1.html
@@ -10,10 +10,10 @@
             <h5 class="card-title">Question</h5>
             <p class="card-text">$${{values[0]}}x^{ {{ values[3] }} } + {{values[1]}}x^{ {{ values[3] }} }$$</p>
             <!-- <a href="#" class="btn btn-warning">Check answer</a> -->
-            <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#exampleModalCenter2">
+            <button style="background-color:#FFA066; color:white;" type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter2">
               Check answer
             </button>
-            <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#exampleModalCenter">
+            <button style="background-color:#2DC4B6; color:white;" type="button" class="btn float-right" data-toggle="modal" data-target="#exampleModalCenter">
               Hint
             </button>
           </div>
