--- a/templates/dilution.html
+++ b/templates/dilution.html
@@ -14,10 +14,10 @@
               Sam needs to dilute {{v0}}mL of an acid from {{v1}}g/L to {{v2}}g/L. To what volume must he fill the beaker?
             </p>
 
-            <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#exampleModalCenter2">
+            <button style="background-color:#FFA066; color:white;" type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter2">
               Check answer
             </button>
-            <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#exampleModalCenter">
+            <button style="background-color:#2DC4B6; color:white;" type="button" class="btn float-right" data-toggle="modal" data-target="#exampleModalCenter">
               Hint
             </button>
           </div>
