--- a/templates/permafrost.html
+++ b/templates/permafrost.html
@@ -55,15 +55,16 @@
 
 
             <!-- <a href="#" class="btn btn-warning">Check answer</a> -->
-            <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#exampleModalCenter2">
+            <button style="background-color:#FFA066; color:white;" type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter2">
               Check answer
             </button>
-            <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#exampleModalCenter">
+            <button style="background-color:#2DC4B6; color:white;" type="button" class="btn float-right" data-toggle="modal" data-target="#exampleModalCenter">
               Hint
             </button>
           </div>
         </div>
       </div>
+      <!-- <iframe height="410px" width="720px" src="https://editor.p5js.org/saltarachofmann/embed/NXlKogk8Dr"></iframe> -->
       <!-- Modal -->
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
