--- a/templates/atom.html
+++ b/templates/atom.html
@@ -43,10 +43,10 @@
 
 
             <!-- <a href="#" class="btn btn-warning">Check answer</a> -->
-            <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#exampleModalCenter2">
+            <button style="background-color:#FFA066; color:white;" type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter2">
               Check answer
             </button>
-            <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#exampleModalCenter">
+            <button style="background-color:#2DC4B6; color:white;" type="button" class="btn float-right" data-toggle="modal" data-target="#exampleModalCenter">
               Hint
             </button>
             </div>
