--- a/templates/density.html
+++ b/templates/density.html
@@ -9,7 +9,7 @@
       <div class="col-md-6 offset-md-3">
 
         <div class="card">
-          <h5 class="card-header">Pressure<button class="btn btn-dark float-right" onclick="document.location.reload()">New</button></h5>
+          <h5 class="card-header">Density<button class="btn btn-dark float-right" onclick="document.location.reload()">New</button></h5>
           <div class="card-body">
             <h5 class="card-title">Question</h5>
             <p class="card-text">
@@ -19,10 +19,10 @@
 
             </p>
             <!-- <a href="#" class="btn btn-warning">Check answer</a> -->
-            <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#exampleModalCenter2">
+            <button style="background-color:#FFA066; color:white;" type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter2">
               Check answer
             </button>
-            <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#exampleModalCenter">
+            <button style="background-color:#2DC4B6; color:white;" type="button" class="btn float-right" data-toggle="modal" data-target="#exampleModalCenter">
               Hint
             </button>
           </div>
