--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
               <a class="dropdown-item" href="/quadratic">Functions: Quadratic </a>
               <a class="dropdown-item" href="/circle">Conics: Formula of a Circle </a>
 
-              <a class="dropdown-item disabled" href="#">New options coming soon</a>
+              <a style="color:white;" class="dropdown-item disabled" href="#">New options coming soon</a>
               <!--<a class="dropdown-item disabled" href="#">Another option</a>-->
             </div>
           </li>
@@ -99,11 +99,25 @@
               <a class="dropdown-item" href="/genetics">Punnett Square 1 </a>
 
 
-              <a class="dropdown-item disabled" href="#">New options coming soon</a>
+              <a style="color:white;"  class="dropdown-item disabled" href="#">New options coming soon</a>
 
               <!--<a class="dropdown-item disabled" href="#">Another option</a>-->
             </div>
           </li>
+          <li class="nav-item">
+            <a style="color:white;" href="https://drive.google.com/open?id=12N9whzebBuKLD35VM9clOXXKlvCJptr2gN4c8i0VoCI" class="nav-link">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+              <input type="hidden" name="cmd" value="_s-xclick" />
+              <input type="hidden" name="hosted_button_id" value="QGZQ4EG5HW8KY" />
+              <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+              <img alt="" border="0" src="https://www.paypal.com/en_CA/i/scr/pixel.gif" width="1" height="1" />
+              </form>
+            </a>
+          </li>
+
         </ul>
       </div>
     </nav>
@@ -128,12 +142,6 @@
 
 
 
-<br>
-<br>
-<br>
-
-
-
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -153,8 +161,19 @@
       });
     </script>
 
-
+    <footer class="fixed-bottom footer mt-auto py-3 text-center">
+      <div class="container-fluid">
+        <span class="text-muted">Created by Samuel Altarac. Help make this site better with a donation.</span>
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+        <input type="hidden" name="cmd" value="_s-xclick" />
+        <input type="hidden" name="hosted_button_id" value="QGZQ4EG5HW8KY" />
+        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+        <img alt="" border="0" src="https://www.paypal.com/en_CA/i/scr/pixel.gif" width="1" height="1" />
+        </form>
+      </div>
+    </footer>
       </body>
+
 
       <!-- changes the color of answer after clicked -->
       <script type="text/javascript">
