--- a/templates/efficiency.html
+++ b/templates/efficiency.html
@@ -15,6 +15,10 @@
               To perform work equal to {{energy}} J, a machine consumes {{total}} J. What is the energy efficiency of this machine?
 
             </p>
+            <p>
+              <div style="width:100%;height:0;padding-bottom:52%;position:relative;"><iframe src="https://giphy.com/embed/C1nEwzSrlVW80" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/machine-chain-factory-C1nEwzSrlVW80"></a>
+            </p>
+
             <!-- <a href="#" class="btn btn-warning">Check answer</a> -->
             <button style="background-color:#FFA066; color:white;" type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter2">
               Check answer
