--- a/templates/index.html
+++ b/templates/index.html
@@ -9,15 +9,16 @@
       <div class="card">
         <div class="card-body">
           <p>
-            Select a topic then, solve the question. Check your answer by clicking on "check answer" and get a tutorial video when you click on "hint". To get a new randomly generated question, click on the "new" button in the top right corner of the flash card. 
+            Select a topic then, solve the question. Check your answer by clicking on "check answer" and get a tutorial video when you click on "hint". To get a new randomly generated question, click on the "new" button in the top right corner of the flash card.
           </p>
           <p>
-            Get 5 correct answers in a row before checking the topic off your mastered list.
+            Get 5 correct answers in a row before moving on.
           </p>
         </div>
       </div>
 
     </div>
+
   </div>
 
 
