--- a/templates/base.html
+++ b/templates/base.html
@@ -93,6 +93,7 @@
               <a class="dropdown-item" href="/heat">Heat energy</a>
               <a class="dropdown-item" href="/efficiency">Energy efficiency </a>
               <a class="dropdown-item" href="/power">Electrical Power </a>
+              <a class="dropdown-item" href="/power">Stoichiometry</a>
 
               <a class="dropdown-item" href="/mol">Molar mass</a>
               <a class="dropdown-item" href="/eco">Mark-recapture method</a>
