--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,9 @@
  src="//cdnjs.cloudflare.com/ajax/libs/jsxgraph/0.99.7/jsxgraphcore.js"></script>
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/jsxgraph/0.99.7/jsxgraph.css" />
 
+<script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
+
+
 <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet"/>
 
 
@@ -93,7 +96,7 @@
               <a class="dropdown-item" href="/heat">Heat energy</a>
               <a class="dropdown-item" href="/efficiency">Energy efficiency </a>
               <a class="dropdown-item" href="/power">Electrical Power </a>
-              <a class="dropdown-item" href="/power">Stoichiometry</a>
+              <a class="dropdown-item" href="/stoic">Stoichiometry</a>
 
               <a class="dropdown-item" href="/mol">Molar mass</a>
               <a class="dropdown-item" href="/eco">Mark-recapture method</a>
