--- a/templates/dilution.html
+++ b/templates/dilution.html
@@ -11,7 +11,7 @@
           <div class="card-body">
             <h5 class="card-title">Question</h5>
             <p>
-              Sam needs to dilute {{v0}}mL of an acid from {{v1}}g/L to {{v2}}g/L. To what volume must he fill the beaker?
+              Sam needs to dilute {{v0}}mL of an acid solution from a concentration of {{v1}}g/L to {{v2}}g/L. To what volume must he fill the beaker?
             </p>
 
             <button style="background-color:#FFA066; color:white;" type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter2">
