--- a/templates/heatEnergy.html
+++ b/templates/heatEnergy.html
@@ -13,7 +13,7 @@
       <div class="col-md-6 offset-md-3">
 
         <div class="card">
-          <h5 class="card-header">Pressure<button class="btn btn-dark float-right" onclick="document.location.reload()">New</button></h5>
+          <h5 class="card-header">Heat Energy<button class="btn btn-dark float-right" onclick="document.location.reload()">New</button></h5>
           <div class="card-body">
             <h5 class="card-title">Question</h5>
             <p class="card-text">
