--- a/templates/index.html
+++ b/templates/index.html
@@ -5,15 +5,19 @@
 
 
   <div class="row">
-    <div class="col-md-4 offset-md-4">
+    <div class="col-md-6 offset-md-3">
       <div class="card">
         <div class="card-body">
           <p>
-            Select a topic then, solve the question. Check your answer by clicking on "check answer" and get a tutorial video when you click on "hint". To get a new randomly generated question, click on the "new" button in the top right corner of the flash card.
+            Study items are organized into lists and divided by "worlds".
           </p>
           <p>
-            Get 5 correct answers in a row before moving on.
+            Practice your <strong>declarative knowledge</strong> (recall of facts) by selecting the "Definitions flashards" from the top of the list.
           </p>
+          <p>
+            Practice your <strong>procedural knowledge</strong> (skills and strategies) by selecting any other topic on the list and solving the question. Check your answer by clicking on "check answer" or get a tutorial video when you click on "hint". To get a new randomly generated question, click on the "new" button in the top right corner of the flash card.
+          </p>
+          <p>You may need to scroll to see all the available topics in the lists.</p>
         </div>
       </div>
 
