--- a/templates/conservation_energy.html
+++ b/templates/conservation_energy.html
@@ -2,32 +2,24 @@
 
 {% block body %}
 
-{% set i = range(0, 2)|random %}
-{% set n = range(0, 2)|random %}
-
-{% set mass = masses[i] %}
-{% set vol = volumes[n] %}
-
-{% set m = masses[i].split(' ')[0] %}
-{% set v = volumes[n].split(' ')[0] %}
 
       <div class="col-md-6 offset-md-3">
 
         <div class="card">
-          <h5 class="card-header">PPM<button class="btn btn-dark float-right" onclick="document.location.reload()">New</button></h5>
+          <h5 class="card-header">Conservation of Energy<button class="btn btn-dark float-right" onclick="document.location.reload()">New</button></h5>
           <div class="card-body">
             <h5 class="card-title">Question</h5>
             <p class="card-text">
 
-              {{mass}} of \( \ce{ CaCl2 } \) is put in a volumetric flask and {{vol}} of water is added. What is the concentration in ppm?
-
+              {{q}}
 
             </p>
+
             <!-- <a href="#" class="btn btn-warning">Check answer</a> -->
-            <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#exampleModalCenter2">
+            <button style="background-color:#FFA066; color:white;" type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter2">
               Check answer
             </button>
-            <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#exampleModalCenter">
+            <button style="background-color:#2DC4B6; color:white;" type="button" class="btn float-right" data-toggle="modal" data-target="#exampleModalCenter">
               Hint
             </button>
           </div>
@@ -44,7 +36,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/W_L4O-uqeRE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/LIh9ueO9FBM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -66,7 +58,7 @@
 </div>
 <div class="modal-body">
 
-{% if i == 0 and n == 0 %} Concentration = {{((1000*m|float)/(v|float))|round(2)}} ppm {% elif i == 1 and n == 0 %} Concentration = {{((m|float)/(v|float))|round(2)}} ppm {% elif i == 0 and n == 1 %} Concentration = {{(1000*(m|float)/(v|float/1000))|round(2)}} ppm {% else %} {{((m|float)/(v|float/1000))|round(2)}} ppm {% endif %}
+  {{ans}}
 
 
 </div>
@@ -77,5 +69,6 @@
 </div>
 </div>
 </div>
+
 
 {% endblock %}
