--- a/templates/sci_menu.html
+++ b/templates/sci_menu.html
@@ -28,7 +28,7 @@
 
 
           <div id ='a1' class="list-group collapse show" data-parent="#accordionExample2">
-            <a href="/ES_sec4" class="list-group-item list-group-item-action bg-light">
+            <a href="/ES_sec4" class="list-group-item list-group-item-action text-light bg-dark">
               Definitions Flashcards - Sec 4
             </a>
             <a href="/permafrost" class="list-group-item list-group-item-action">Permafrost <span><img width = '20px' src='/static/new.svg' /></span>
@@ -67,7 +67,7 @@
 
             </p>
           <div id='g1' class="list-group collapse show" data-parent="#accordionExample">
-            <a href="/MW_sec4" class="list-group-item list-group-item-action bg-light">
+            <a href="/MW_sec4" class="list-group-item list-group-item-action text-light bg-dark">
               Definitions Flashcards - Sec 4
             </a>
 
@@ -126,10 +126,23 @@
           Technological World
         </div>
         <div class="card-body">
-          <!-- <h5 class="card-title">Special title treatment</h5> -->
-          <p class="card-text">Select the topic you wish to practice.</p>
-          <div class="list-group">
-            <a href="/TW_sec4" class="list-group-item list-group-item-action bg-light">
+          <div class="accordion" id="accordionExample3">
+
+          <p class="card-text">
+              <button class="btn btn-link text-dark" type="button" data-toggle="collapse" data-target="#a3">(AST) Select the topic you wish to practice.</button>
+              <div id="a3" class="collapse" data-parent="#accordionExample3">
+              <p>
+                  Coming soon.
+              </p>
+          </div>
+              <button class="btn btn-link text-dark" type="button" data-toggle="collapse" data-target="#a4">(ST) Select the topic you wish to practice.</button>
+          </p>
+
+
+
+
+          <div id ='a4' class="list-group collapse show" data-parent="#accordionExample3">
+            <a href="/TW_sec4" class="list-group-item list-group-item-action text-light bg-dark">
               Definitions Flashcards - Sec 4
             </a>
             <a href="/speed_ratio" class="list-group-item list-group-item-action">Speed Ratio (Gears) <span><img width = '20px' src='/static/new.svg' /></span></a>
@@ -140,6 +153,7 @@
 
           </div>
           <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+          </div>
         </div>
       </div>
     </div>
@@ -150,10 +164,24 @@
           Living World
         </div>
         <div class="card-body">
-          <!-- <h5 class="card-title">Special title treatment</h5> -->
-          <p class="card-text">Select the topic you wish to practice.</p>
-          <div class="list-group">
-            <a disabled href="#" class="list-group-item list-group-item-action bg-light disabled text-danger">
+
+          <div class="accordion" id="accordionExample4">
+
+          <p class="card-text">
+              <button class="btn btn-link text-dark" type="button" data-toggle="collapse" data-target="#a5">(AST) Select the topic you wish to practice.</button>
+              <div id="a5" class="collapse" data-parent="#accordionExample4">
+              <p>
+                  Coming soon.
+              </p>
+          </div>
+              <button class="btn btn-link text-dark" type="button" data-toggle="collapse" data-target="#a6">(ST) Select the topic you wish to practice.</button>
+          </p>
+
+
+
+
+          <div id ='a6' class="list-group collapse show" data-parent="#accordionExample4">
+            <a disabled href="#" class="list-group-item list-group-item-action text-light bg-dark disabled text-danger">
               Definitions Flashcards - Sec 4 (coming soon)
             </a>
             <a href="/eco" class="list-group-item list-group-item-action">Mark-recapture method</a>
@@ -165,6 +193,7 @@
 
           </div>
           <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+          </div>
         </div>
       </div>
     </div>
